--- a/Main_Cafe.xaml
+++ b/Main_Cafe.xaml
@@ -52,7 +52,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        
+
         <Style x:Key="listBtn_Style" TargetType="Button">
             <Setter Property="OverridesDefaultStyle" Value="True"/>
             <Setter Property="Template">
@@ -70,7 +70,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        
+
         <!--
         <Style x:Key="sticker_test" TargetType="Label">
             <Setter Property="Template">
@@ -315,117 +315,121 @@
                 </Grid>
 -->
             </Grid>
-            
+
             <!--선택한 리스트 영역-->
             <Grid Grid.Row="3" ScrollViewer.VerticalScrollBarVisibility="Auto">
-                <!--               <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="7*"/>
-                    </Grid.RowDefinitions> -->
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.95*"/>
+                    <RowDefinition Height="0.05*"/>
+                </Grid.RowDefinitions>
 
-                <!-- 결제선 타이틀 -->
-                <!--                <Grid Grid.Row="0">
+                <Grid Grid.Row="0">
+                    <ListView x:Name="paymentListView" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="False" SizeChanged="paymentListView_SizeChanged" Grid.ColumnSpan="2" Margin="0,0,-0.4,0.2" >
+                        <ListView.Resources>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                            </Style>
+                        </ListView.Resources>
+                        <ListView.View>
+                            <GridView>
+                                <GridView.Columns>
+                                    <GridViewColumn Header="제품명">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                                                    <TextBlock Text="{Binding ProductName}" FontWeight="Bold"/>
+                                                    <TextBlock Text="{Binding ProductOption}" FontSize="10"/>
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="수량">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                                                    <Button Height="25" Width="25" 
+                                                    HorizontalAlignment="Center"  
+                                                    Click="BtnMinus_Click" 
+                                                    BorderBrush="{x:Null}" 
+                                                    Foreground="{x:Null}"
+                                                    Style="{StaticResource listBtn_Style}" Visibility="Visible">
+                                                        <Button.Background>
+                                                            <ImageBrush ImageSource="minus.png"/>
+                                                        </Button.Background>
+                                                    </Button>
+                                                    <TextBlock  Text="{Binding ProductQuantity}" TextAlignment="Justify" Margin="10,0"/>
+                                                    <Button Height="25" Width="25" 
+                                                    HorizontalAlignment="Center"  
+                                                    Click="BtnPlus_Click" 
+                                                    BorderBrush="{x:Null}" 
+                                                    Foreground="{x:Null}"
+                                                    Style="{StaticResource listBtn_Style}">
+                                                        <Button.Background>
+                                                            <ImageBrush ImageSource="plus.png"/>
+                                                        </Button.Background>
+                                                    </Button>
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="가격">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock HorizontalAlignment="Center"
+                                                       Text="{Binding ProductPrice}" FontWeight="Normal"/>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn>
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button Height="25" Width="25" 
+                                                    HorizontalAlignment="Center"  
+                                                    Click="BtnDelete_Click" 
+                                                    BorderBrush="{x:Null}" 
+                                                    Foreground="{x:Null}"
+                                                    Style="{StaticResource listBtn_Style}" HorizontalContentAlignment="Center">
+                                                    <Button.Background>
+                                                        <ImageBrush ImageSource="delete.png"/>
+                                                    </Button.Background>
+                                                </Button>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView.Columns>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </Grid>
+
+                <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Grid Grid.Column="0">
-                        <Border BorderThickness="1" BorderBrush="Black">
-                            <TextBlock  VerticalAlignment="Center" TextAlignment="Center" Text="제품명" FontWeight="Bold"/>
-                        </Border>
-                    </Grid>
                     <Grid Grid.Column="1">
-                        <Border BorderThickness="1" BorderBrush="Black">
-                            <TextBlock  VerticalAlignment="Center" TextAlignment="Center" Text="수량" FontWeight="Bold"/>
-                        </Border>
+                        <Button x:Name="btn_listView_Previous" Margin="50,2,5.4,-0.2" Click="btn_listView_Previous_Click">
+                            <Button.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" Value="50,0,0,50" />
+                                </Style>
+                            </Button.Resources>
+                        </Button>
                     </Grid>
+
                     <Grid Grid.Column="2">
-                        <Border BorderThickness="1" BorderBrush="Black">
-                            <TextBlock  VerticalAlignment="Center" TextAlignment="Center" Text="가격" FontWeight="Bold"/>
-                        </Border>
+                        <Button x:Name="btn_listView_Next" Margin="5,2,50.4,-0.2" Click="btn_listView_Next_Click" Height="11" VerticalAlignment="Top">
+                            <Button.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" Value="0,50,50,0" />
+                                </Style>
+                            </Button.Resources>
+                        </Button>
                     </Grid>
-                </Grid> -->
-
-                <!--제품 선택 목록-->
-                <!--               <Grid Grid.Row="1">-->
-
-
-                <ListView x:Name="paymentListView" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="False" SizeChanged="paymentListView_SizeChanged" >
-                    <ListView.Resources>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                        </Style>
-                    </ListView.Resources>
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Header="제품명">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                            <TextBlock Text="{Binding ProductName}" FontWeight="Bold"/>
-                                            <TextBlock Text="{Binding ProductOption}" FontSize="10"/>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Header="수량">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                            <Button Height="25" Width="25" 
-                                                HorizontalAlignment="Center"  
-                                                Click="BtnMinus_Click" 
-                                                BorderBrush="{x:Null}" 
-                                                Foreground="{x:Null}"
-                                                Style="{StaticResource listBtn_Style}" Visibility="Visible">
-                                                <Button.Background>
-                                                    <ImageBrush ImageSource="minus.png"/>
-                                                </Button.Background>
-                                            </Button>
-                                            <TextBlock  Text="{Binding ProductQuantity}" TextAlignment="Justify"/>
-                                            <Button Height="25" Width="25" 
-                                                HorizontalAlignment="Center"  
-                                                Click="BtnPlus_Click" 
-                                                BorderBrush="{x:Null}" 
-                                                Foreground="{x:Null}"
-                                                Style="{StaticResource listBtn_Style}">
-                                                <Button.Background>
-                                                    <ImageBrush ImageSource="plus.png"/>
-                                                </Button.Background>
-                                            </Button>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Header="가격">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock TextAlignment="Right"
-                                                   Text="{Binding ProductPrice}" FontWeight="Normal"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn>
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <Button Height="25" Width="25" 
-                                                HorizontalAlignment="Center"  
-                                                Click="BtnDelete_Click" 
-                                                BorderBrush="{x:Null}" 
-                                                Foreground="{x:Null}"
-                                                Style="{StaticResource listBtn_Style}" HorizontalContentAlignment="Center">
-                                            <Button.Background>
-                                                <ImageBrush ImageSource="delete.png"/>
-                                            </Button.Background>
-                                        </Button>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
+                </Grid>
             </Grid>
 
 
