페이지 이동버튼 수정및 등등

--- a/Main_Cafe.xaml
+++ b/Main_Cafe.xaml
@@ -40,8 +40,21 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border Name="border" BorderThickness="1" BorderBrush="DarkGray" Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Bottom" />
+                        <Border Name="border" BorderThickness="1" BorderBrush="DarkGray" >
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="0.3*"/>
+                                </Grid.RowDefinitions>
+
+                                <Grid Grid.Row="0" Background="{TemplateBinding Background}" >
+                                </Grid>
+
+                                <Grid Grid.Row="1">
+                                    <ContentPresenter Margin="5" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                                </Grid>
+                            </Grid>
+                            <!--<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Bottom" />-->
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
@@ -70,7 +83,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-
+            
         <!--
         <Style x:Key="sticker_test" TargetType="Label">
             <Setter Property="Template">
@@ -248,7 +261,7 @@
             <Grid Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="10*"/>
-                    <RowDefinition Height="0.5*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
                 <Grid  Grid.Row="0" x:Name="Menu" Margin="5,5,5,0" >
@@ -262,24 +275,12 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Grid Grid.Column="1">
-                        <Button x:Name="btn_Previous" Margin="50,2,5,2" Click="btn_Previous_Click">
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="50,0,0,50" />
-                                </Style>
-                            </Button.Resources>
-                        </Button>
+                    <Grid Grid.Column="1" Margin="60,5,5,5">
+                        <Button x:Name="btn_Previous"  Click="btn_Previous_Click"/>
                     </Grid>
 
-                    <Grid Grid.Column="2">
-                        <Button x:Name="btn_Next" Margin="5,2,50,0" Click="btn_Next_Click" Height="13" VerticalAlignment="Top">
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="0,50,50,0" />
-                                </Style>
-                            </Button.Resources>
-                        </Button>
+                    <Grid Grid.Column="2" Margin="5,5,60,5">
+                        <Button x:Name="btn_Next"  Click="btn_Next_Click"/>
                     </Grid>
 
                 </Grid>
